--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "laravel-vite-plugin": "^0.7.5",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.56.1",
+        "source-map-support": "^0.5.21",
         "vite": "^4.0.0"
     },
     "dependencies": {
